# whisperCpp

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  download_models.sh
app/src/main/: AndroidManifest.xml
app/src/main/java/com/negi/stt/: MainActivity.kt  MainScreen.kt  MainScreenEntryPoint.kt  MainScreenViewModel.kt  PermissionUI.kt  Recorder.kt  RiffWaveHelper.kt  myRecord.kt
app/src/main/java/com/negi/stt/ui/theme/: Color.kt  Theme.kt  Type.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: nativelib.cpp
nativelib/src/main/java/com/negi/nativelib/: LibWhisper.kt  NativeLib.kt  WhisperCpuConfig.kt
nativelib/src/main/jni/whisper/: CMakeLists.txt  WhisperLib.c  jni.c
